changed margin for button to line up, fixed white space

--- a/Coffee Shop Starter Code/css/global.css
+++ b/Coffee Shop Starter Code/css/global.css
@@ -9,6 +9,7 @@ a {
 body {
     font-family: 'Open Sans';
     font-weight: 400;
+    margin: 0;
 }
 
 h1, h2 {
